# LED_Panel_Setting_Calculator

./: CMakeLists.txt  GEN_1.cpp  GEN_1.groovy  GEN_2.cpp  GEN_2.groovy  GEN_3.cpp  GEN_3.groovy  LED_Panel_Setting_Calculator.groovy  Panel_Calculator.groovy  README.md  config.h  helper.cpp  helper.h  main.cpp  test.groovy
LED_Panel_Setting_Calculator/: GEN_1.groovy  GEN_2.groovy  GEN_3.groovy  Panel_Calculator.groovy
include/: config.h  helper.h
src/: GEN_1.cpp  GEN_2.cpp  GEN_3.cpp  helper.cpp  main.cpp
